Bug 439548: When tag name is substring of other tag, tag can not be added; r/sr=bienvenu